testsuite/tests/gadt/T3651.stderr

T3651.hs:11:15: error:
    • Couldn't match type ‘()’ with ‘Bool’
      Expected: a
        Actual: ()
    • In the expression: ()
      In an equation for ‘unsafe1’: unsafe1 B U = ()

T3651.hs:14:15: error:
    • Couldn't match type ‘()’ with ‘Bool’
      Expected: a
        Actual: ()
    • In the expression: ()
      In an equation for ‘unsafe2’: unsafe2 B U = ()
